--- a/portfolio.html
+++ b/portfolio.html
@@ -1,123 +1,168 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <!-- Верхняя линия -->
     <header>
-        <nav>
-            <a href="./index.html" class="logo">
-                <span class="logo-item">Web</span>Studio
-            </a>
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="" class="link current">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul class="contacts list">
-            <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-            <li><a href="tel:+380991111111" class="contact">+38 099 111 11 11</a></li>
+      <nav>
+        <a class="logo" href="./index.html"> <span class="logo-item">Web</span>Studio </a>
+        <ul class="site-nav list">
+          <li><a class="link" href="./index.html">Студия</a></li>
+          <li><a class="link current" href="">Портфолио</a></li>
+          <li><a class="link" href="">Контакты</a></li>
         </ul>
+      </nav>
+      <ul class="contacts list">
+        <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
+      </ul>
     </header>
 
-<main>
-
-    <!-- Портфолио -->
-    <section>
-
+    <main>
+      <!-- Портфолио -->
+      <section>
         <h1 hidden>Портфолио</h1>
 
         <!-- Фильтры -->
         <ul class="filters list">
-            <li>
-                <button type="button" class="filter">Все</button>
-                </li>
-            <li>
-               <button type="button" class="filter">Веб-сайты</button> 
-                </li>
-            <li>
-                <button type="button" class="filter">Приложения</button>
-                </li>
-            <li>
-               <button type="button" class="filter">Дизайн</button> 
-                </li>
-            <li>
-                <button type="button" class="filter"> Маркетинг</button>
-               </li>
+          <li>
+            <button class="filter" type="button">Все</button>
+          </li>
+          <li>
+            <button class="filter" type="button">Веб-сайты</button>
+          </li>
+          <li>
+            <button class="filter" type="button">Приложения</button>
+          </li>
+          <li>
+            <button class="filter" type="button">Дизайн</button>
+          </li>
+          <li>
+            <button class="filter" type="button">Маркетинг</button>
+          </li>
         </ul>
 
         <!-- Примеры работ -->
         <ul class="works list">
-            <li>
-               <div>
-                   <img src="./images/img1p.jpg" alt="Главная страница сайта Технокряк" width="370" height="294">
-                   <h2  class="work-title">Технокряк</h2>
-                   <span class="work-type">Веб-сайт</span>
-               </div>
-            </li>
-            <li><div>
-                <img src="./images/img2p.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                   <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
-                   <p class="work-type">Дизайн</p>
-               </div></li>
-            <li><div>
-                <img src="./images/img3p.jpg" alt="Обложка приложения ресторана Seafood" width="370" height="294">
-                  <h2 class="work-title">Ресторан Seafood</h2>
-                   <p class="work-type">Приложение</p>
-               </div></li>
-            <li><div>
-                <img src="./images/img4p.jpg" alt="Наушники" width="370" height="294">
-                   <h2 class="work-title">Проект Prime</h2>
-                   <p class="work-type">Маркетинг</p>
-               </div></li>
-            <li><div>
-                <img src="./images/img5p.jpg" alt="Коробки" width="370" height="294">
-                   <h2 class="work-title">Проект Boxes</h2>
-                   <p class="work-type">Приложение</p>
-               </div></li>
-            <li><div>
-                <img src="./images/img6p.jpg" alt="Главная страница сайта Inspiration has no Borders" width="370" height="294">
-                   <h2 class="work-title">Inspiration has no Borders</h2>
-                   <p class="work-type">Веб-сайт</p>
-               </div></li>
-            <li><div>
-                <img src="./images/img7p.jpg" alt="Раскрытая книга" width="370" height="294">
-                   <h2 class="work-title">Издание Limited Edition</h2>
-                   <p class="work-type">Дизайн</p>
-               </div></li>
-            <li><div>
-                <img src="./images/img8p.jpg" alt="Ярлык проекта LAB" width="370" height="294">
-                   <h2 class="work-title">Проект LAB</h2>
-                   <p class="work-type">Маркетинг</p>
-               </div></li>
-            <li><div>
-                <img src="./images/img9p.jpg" alt="Экран компьютера с главной страницей" width="370" height="294">
-                   <h2 class="work-title">Growing Business</h2>
-                   <p class="work-type">Приложение</p>
-               </div></li>
+          <li>
+            <div>
+              <img
+                src="./images/img1p.jpg"
+                alt="Главная страница сайта Технокряк"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-title">Технокряк</h2>
+              <span class="work-type">Веб-сайт</span>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img
+                src="./images/img2p.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
+              <p class="work-type">Дизайн</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img
+                src="./images/img3p.jpg"
+                alt="Обложка приложения ресторана Seafood"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-title">Ресторан Seafood</h2>
+              <p class="work-type">Приложение</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img src="./images/img4p.jpg" alt="Наушники" width="370" height="294" />
+              <h2 class="work-title">Проект Prime</h2>
+              <p class="work-type">Маркетинг</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img src="./images/img5p.jpg" alt="Коробки" width="370" height="294" />
+              <h2 class="work-title">Проект Boxes</h2>
+              <p class="work-type">Приложение</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img
+                src="./images/img6p.jpg"
+                alt="Главная страница сайта Inspiration has no Borders"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-title">Inspiration has no Borders</h2>
+              <p class="work-type">Веб-сайт</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img src="./images/img7p.jpg" alt="Раскрытая книга" width="370" height="294" />
+              <h2 class="work-title">Издание Limited Edition</h2>
+              <p class="work-type">Дизайн</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img src="./images/img8p.jpg" alt="Ярлык проекта LAB" width="370" height="294" />
+              <h2 class="work-title">Проект LAB</h2>
+              <p class="work-type">Маркетинг</p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img
+                src="./images/img9p.jpg"
+                alt="Экран компьютера с главной страницей"
+                width="370"
+                height="294"
+              />
+              <h2 class="work-title">Growing Business</h2>
+              <p class="work-type">Приложение</p>
+            </div>
+          </li>
         </ul>
-    </section>
+      </section>
+    </main>
 
-</main>
-
-<!-- Подвал -->
-<footer class="footer">
-    <a href="./index.html" class="logo"><span class="logo-item">Web</span><span class="logo-down">Studio</span></a>
-    <address class="address">
-        г. Киев, пр-т Леси Украинки, 26
-    </address>
-    <ul class="contacts list">
-        <li><a href="mailto:info@devstudio.com" class="contact-down">info@devstudio.com</a></li>
-        <li><a href="tel:+380991111111" class="contact-down">+38 099 111 11 11</a></li>
-    </ul>
-</footer>
-</body>
+    <!-- Подвал -->
+    <footer class="footer">
+      <a class="logo" href="./index.html"
+        ><span class="logo-item">Web</span><span class="logo-down">Studio</span></a
+      >
+      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+      <ul class="contacts list">
+        <li><a class="contact-down" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-down" href="tel:+380991111111">+38 099 111 11 11</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
