--- a/index.html
+++ b/index.html
@@ -21,120 +21,136 @@
 
   <body>
     <!-- Верхняя линия -->
+
     <header>
-      <nav>
+      <div class="container main-nav">
         <a class="logo" href="./index.html"> <span class="logo-item">Web</span>Studio </a>
-        <ul class="site-nav list">
-          <li><a class="link current" href="">Студия</a></li>
-          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+        <nav>
+          <ul class="site-nav list">
+            <li class="item"><a class="link current" href="">Студия</a></li>
+            <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+            <li class="item"><a class="link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li class="item">
+            <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="item"><a class="contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="contacts list">
-        <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
+
     <main>
       <!-- Шапка -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="button" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="button" type="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- Особенности -->
       <section class="section">
-        <h2 hidden class="section-title">Особенности</h2>
-        <ul class="features list">
-          <li>
-            <h3 class="feature-title">Внимание к деталям</h3>
-            <p class="feature-description">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">Пунктуальность</h3>
-            <p class="feature-description">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">Планирование</h3>
-            <p class="feature-description">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="feature-title">Современные технологии</h3>
-            <p class="feature-description">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden class="section-title">Особенности</h2>
+          <ul class="features list">
+            <li>
+              <h3 class="feature-title">Внимание к деталям</h3>
+              <p class="feature-description">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-title">Пунктуальность</h3>
+              <p class="feature-description">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-title">Планирование</h3>
+              <p class="feature-description">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-title">Современные технологии</h3>
+              <p class="feature-description">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/box1.jpg" alt="Десктопные приложения" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./images/box2.jpg" alt="Мобильные приложения" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./images/box3.jpg" alt="Дизайнерские решения" width="370" height="294" />
-          </li>
-        </ul>
+      <section class="section no-padding">
+        <div class="container">
+          <h2 class="section-title centered">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li>
+              <img src="./images/box1.jpg" alt="Десктопные приложения" width="370" height="294" />
+            </li>
+            <li>
+              <img src="./images/box2.jpg" alt="Мобильные приложения" width="370" height="294" />
+            </li>
+            <li>
+              <img src="./images/box3.jpg" alt="Дизайнерские решения" width="370" height="294" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Наша компанда -->
-      <section class="section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team list">
-          <li>
-            <div>
-              <img src="./images/img1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260" />
-              <h3 class="teammate-name">Игорь Демьяненко</h3>
-              <p class="position" lang="en">Product Designer</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="./images/img2.jpg" alt="Фото Ольги Репиной" width="270" height="260" />
-              <h3 class="teammate-name">Ольга Репина</h3>
-              <p class="position" lang="en">Frontend Developer</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="./images/img3.jpg" alt="Фото Николая Тарасова" width="270" height="260" />
-              <h3 class="teammate-name">Николай Тарасов</h3>
-              <p class="position" lang="en">Marketing</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <img src="./images/img4.jpg" alt="Фото Михаила Ермакова" width="270" height="260" />
-              <h3 class="teammate-name">Михаил Ермаков</h3>
-              <p class="position" lang="en">UI Designer</p>
-            </div>
-          </li>
-        </ul>
+      <section class="section team">
+        <div class="container">
+          <h2 class="section-title centered">Наша команда</h2>
+          <ul class="team list">
+            <li>
+              <div class="card">
+                <img src="./images/img1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260" />
+                <h3 class="teammate-name">Игорь Демьяненко</h3>
+                <p class="position" lang="en">Product Designer</p>
+              </div>
+            </li>
+            <li>
+              <div class="card">
+                <img src="./images/img2.jpg" alt="Фото Ольги Репиной" width="270" height="260" />
+                <h3 class="teammate-name">Ольга Репина</h3>
+                <p class="position" lang="en">Frontend Developer</p>
+              </div>
+            </li>
+            <li>
+              <div class="card">
+                <img src="./images/img3.jpg" alt="Фото Николая Тарасова" width="270" height="260" />
+                <h3 class="teammate-name">Николай Тарасов</h3>
+                <p class="position" lang="en">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <div class="card">
+                <img src="./images/img4.jpg" alt="Фото Михаила Ермакова" width="270" height="260" />
+                <h3 class="teammate-name">Михаил Ермаков</h3>
+                <p class="position" lang="en">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Подвал -->
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        ><span class="logo-item">Web</span><span class="logo-down">Studio</span></a
-      >
-      <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-      <ul class="contacts list">
-        <li><a class="contact-down" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact-down" href="tel:+380991111111">+38 099 111 11 11</a></li>
-      </ul>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          ><span class="logo-item">Web</span><span class="logo-down">Studio</span>
+        </a>
+        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="contacts list">
+          <li><a class="contact-down" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contact-down" href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
