--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
         <!-- Фильтры -->
         <ul class="filters list">
           <li>
-            <button class="filter" type="button">Все</button>
+            <button class="filter active" type="button">Все</button>
           </li>
           <li>
             <button class="filter" type="button">Веб-сайты</button>
