--- a/portfolio.html
+++ b/portfolio.html
@@ -21,18 +21,20 @@
   <body>
     <!-- Верхняя линия -->
     <header>
-      <nav>
-        <a class="logo" href="./index.html"> <span class="logo-item">Web</span>Studio </a>
-        <ul class="site-nav list">
-          <li><a class="link" href="./index.html">Студия</a></li>
-          <li><a class="link current" href="">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
+      <div class="container main-nav">
+        <nav>
+          <a class="logo" href="./index.html"> <span class="logo-item">Web</span>Studio </a>
+          <ul class="site-nav list">
+            <li><a class="link" href="./index.html">Студия</a></li>
+            <li><a class="link current" href="">Портфолио</a></li>
+            <li><a class="link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="contacts list">
-        <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
 
     <main>
