--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header>
       <div class="container main-nav">
-        <a class="logo" href="./index.html"> <span class="logo-item">Web</span>Studio </a>
+        <a class="logo primary" href="./index.html"> <span class="logo-item">Web</span>Studio </a>
         <nav>
           <ul class="site-nav list">
             <li class="item"><a class="link current" href="">Студия</a></li>
@@ -33,8 +33,7 @@
           </ul>
         </nav>
         <ul class="contacts list">
-          <li class="item">
-            <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="item"><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="item"><a class="contact" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
@@ -51,29 +50,29 @@
       </section>
 
       <!-- Особенности -->
-      <section class="section">
+      <section class="features section">
         <div class="container">
           <h2 hidden class="section-title">Особенности</h2>
           <ul class="features list">
-            <li>
+            <li class="item">
               <h3 class="feature-title">Внимание к деталям</h3>
               <p class="feature-description">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="feature-title">Пунктуальность</h3>
               <p class="feature-description">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="feature-title">Планирование</h3>
               <p class="feature-description">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="feature-title">Современные технологии</h3>
               <p class="feature-description">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -84,17 +83,17 @@
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section class="section no-padding">
+      <section class="section">
         <div class="container">
           <h2 class="section-title centered">Чем мы занимаемся</h2>
-          <ul class="list">
-            <li>
+          <ul class="wedo list">
+            <li class="item">
               <img src="./images/box1.jpg" alt="Десктопные приложения" width="370" height="294" />
             </li>
-            <li>
+            <li class="item">
               <img src="./images/box2.jpg" alt="Мобильные приложения" width="370" height="294" />
             </li>
-            <li>
+            <li class="item">
               <img src="./images/box3.jpg" alt="Дизайнерские решения" width="370" height="294" />
             </li>
           </ul>
@@ -106,30 +105,54 @@
         <div class="container">
           <h2 class="section-title centered">Наша команда</h2>
           <ul class="team list">
-            <li>
+            <li class="item">
               <div class="card">
-                <img src="./images/img1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260" />
+                <img
+                  class="foto"
+                  src="./images/img1.jpg"
+                  alt="Фото Игоря Демьяненко"
+                  width="270"
+                  height="260"
+                />
                 <h3 class="teammate-name">Игорь Демьяненко</h3>
                 <p class="position" lang="en">Product Designer</p>
               </div>
             </li>
-            <li>
+            <li class="item">
               <div class="card">
-                <img src="./images/img2.jpg" alt="Фото Ольги Репиной" width="270" height="260" />
+                <img
+                  class="foto"
+                  src="./images/img2.jpg"
+                  alt="Фото Ольги Репиной"
+                  width="270"
+                  height="260"
+                />
                 <h3 class="teammate-name">Ольга Репина</h3>
                 <p class="position" lang="en">Frontend Developer</p>
               </div>
             </li>
-            <li>
+            <li class="item">
               <div class="card">
-                <img src="./images/img3.jpg" alt="Фото Николая Тарасова" width="270" height="260" />
+                <img
+                  class="foto"
+                  src="./images/img3.jpg"
+                  alt="Фото Николая Тарасова"
+                  width="270"
+                  height="260"
+                />
                 <h3 class="teammate-name">Николай Тарасов</h3>
                 <p class="position" lang="en">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="item">
               <div class="card">
-                <img src="./images/img4.jpg" alt="Фото Михаила Ермакова" width="270" height="260" />
+                <img
+                  class="foto"
+                  src="./images/img4.jpg"
+                  alt="Фото Михаила Ермакова"
+                  width="270"
+                  height="260"
+                />
                 <h3 class="teammate-name">Михаил Ермаков</h3>
                 <p class="position" lang="en">UI Designer</p>
               </div>
@@ -142,7 +165,7 @@
     <!-- Подвал -->
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="logo secondary" href="./index.html"
           ><span class="logo-item">Web</span><span class="logo-down">Studio</span>
         </a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
