--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
           <ul class="features list">
             <li class="item">
               <h3 class="feature-title">Внимание к деталям</h3>
-              <p class="feature-description">
+              <p class="description">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="item">
               <h3 class="feature-title">Пунктуальность</h3>
-              <p class="feature-description">
+              <p class="description">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="item">
               <h3 class="feature-title">Планирование</h3>
-              <p class="feature-description">
+              <p class="description">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="item">
               <h3 class="feature-title">Современные технологии</h3>
-              <p class="feature-description">
+              <p class="description">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
