--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
 
           <ul class="filters list">
             <li class="item">
-              <button class="filter active" type="button">Все</button>
+              <button class="filter active-btn" type="button">Все</button>
             </li>
             <li class="item">
               <button class="filter" type="button">Веб-сайты</button>
@@ -68,118 +68,118 @@
           <!-- Примеры работ -->
           <ul class="works list">
             <li class="item">
+              <img
+                class="card-image"
+                src="./images/img1p.jpg"
+                alt="Главная страница сайта Технокряк"
+                width="370"
+                height="294"
+              />
               <div class="work-card">
-                <img
-                  class="card-image"
-                  src="./images/img1p.jpg"
-                  alt="Главная страница сайта Технокряк"
-                  width="370"
-                  height="294"
-                />
                 <h2 class="work-title">Технокряк</h2>
-                <span class="type">Веб-сайт</span>
+                <p class="type">Веб-сайт</p>
               </div>
             </li>
             <li class="item">
+              <img
+                class="card-image"
+                src="./images/img2p.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+                height="294"
+              />
               <div class="work-card">
-                <img
-                  class="card-image"
-                  src="./images/img2p.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
                 <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
                 <p class="type">Дизайн</p>
               </div>
             </li>
             <li class="item">
+              <img
+                class="card-image"
+                src="./images/img3p.jpg"
+                alt="Обложка приложения ресторана Seafood"
+                width="370"
+                height="294"
+              />
               <div class="work-card">
-                <img
-                  class="card-image"
-                  src="./images/img3p.jpg"
-                  alt="Обложка приложения ресторана Seafood"
-                  width="370"
-                  height="294"
-                />
                 <h2 class="work-title">Ресторан Seafood</h2>
                 <p class="type">Приложение</p>
               </div>
             </li>
             <li class="item">
+              <img
+                class="card-image"
+                src="./images/img4p.jpg"
+                alt="Наушники"
+                width="370"
+                height="294"
+              />
               <div class="work-card">
-                <img
-                  class="card-image"
-                  src="./images/img4p.jpg"
-                  alt="Наушники"
-                  width="370"
-                  height="294"
-                />
                 <h2 class="work-title">Проект Prime</h2>
                 <p class="type">Маркетинг</p>
               </div>
             </li>
             <li class="item">
+              <img
+                class="card-image"
+                src="./images/img5p.jpg"
+                alt="Коробки"
+                width="370"
+                height="294"
+              />
               <div class="work-card">
-                <img
-                  class="card-image"
-                  src="./images/img5p.jpg"
-                  alt="Коробки"
-                  width="370"
-                  height="294"
-                />
                 <h2 class="work-title">Проект Boxes</h2>
                 <p class="type">Приложение</p>
               </div>
             </li>
             <li class="item">
+              <img
+                class="card-image"
+                src="./images/img6p.jpg"
+                alt="Главная страница сайта Inspiration has no Borders"
+                width="370"
+                height="294"
+              />
               <div class="work-card">
-                <img
-                  class="card-image"
-                  src="./images/img6p.jpg"
-                  alt="Главная страница сайта Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                />
                 <h2 class="work-title">Inspiration has no Borders</h2>
                 <p class="type">Веб-сайт</p>
               </div>
             </li>
             <li class="item">
+              <img
+                class="card-image"
+                src="./images/img7p.jpg"
+                alt="Раскрытая книга"
+                width="370"
+                height="294"
+              />
               <div class="work-card">
-                <img
-                  class="card-image"
-                  src="./images/img7p.jpg"
-                  alt="Раскрытая книга"
-                  width="370"
-                  height="294"
-                />
                 <h2 class="work-title">Издание Limited Edition</h2>
                 <p class="type">Дизайн</p>
               </div>
             </li>
             <li class="item">
+              <img
+                class="card-image"
+                src="./images/img8p.jpg"
+                alt="Ярлык проекта LAB"
+                width="370"
+                height="294"
+              />
               <div class="work-card">
-                <img
-                  class="card-image"
-                  src="./images/img8p.jpg"
-                  alt="Ярлык проекта LAB"
-                  width="370"
-                  height="294"
-                />
                 <h2 class="work-title">Проект LAB</h2>
                 <p class="type">Маркетинг</p>
               </div>
             </li>
             <li class="item">
+              <img
+                class="card-image"
+                src="./images/img9p.jpg"
+                alt="Экран компьютера с главной страницей"
+                width="370"
+                height="294"
+              />
               <div class="work-card">
-                <img
-                  class="card-image"
-                  src="./images/img9p.jpg"
-                  alt="Экран компьютера с главной страницей"
-                  width="370"
-                  height="294"
-                />
                 <h2 class="work-title">Growing Business</h2>
                 <p class="type">Приложение</p>
               </div>
